# HVL

./: .gitignore
src/HVL/HVL_launch/: package.xml
src/HVL/HVL_launch/launch/components/: HVL_localization_component.launch.xml  HVL_planning_component.launch.xml  HVL_simulator_component.launch.xml
src/HVL/HVL_launch/map/Sejong_TP_v0.3/: map_projector_info.yaml
src/HVL/HVL_launch/map/uv_land/: lanelet2_map.osm  map_projector_info.yaml
src/HVL/sensor_component/pix_driver/: README.md
src/hvl/hvl_launch/: CMakeLists.txt
src/hvl/hvl_launch/launch/: carla_single_test.xml  carla_test.xml  hvl.launch.xml  planning_simulator.launch.xml
src/hvl/hvl_launch/launch/components/: hvl_api_component.launch.xml  hvl_control_component.launch.xml  hvl_map_component.launch.xml  hvl_perception_component.launch.xml  hvl_sensing_component.launch.xml  hvl_system_component.launch.xml
src/hvl/hvl_launch/map/Sejong_TP_v0.3/: lanelet2_map.osm
src/hvl/sensor_component/pix_driver/pix_hooke_driver/: package.xml
src/hvl/universe_launcher/hvl_api_launch/: package.xml
src/hvl/universe_launcher/hvl_api_launch/launch/: autoware_api.launch.xml
src/hvl/universe_launcher/hvl_localization_launch/: README.md
src/hvl/universe_launcher/hvl_map_launch/: CMakeLists.txt  README.md
src/hvl/universe_launcher/hvl_perception_launch/: README.md  package.xml
src/hvl/universe_launcher/hvl_planning_launch/: package.xml
src/hvl/universe_launcher/hvl_planning_launch/launch/scenario_planning/: lane_driving.launch.xml
src/hvl/universe_launcher/hvl_sensing_launch/: CMakeLists.txt
src/hvl/universe_launcher/hvl_vehicle_launch/launch/: vehicle.launch.xml
src/sensor_kit/fodro_1_sensor_kit_launch/fodro_1_sensor_kit_description/: CMakeLists.txt  package.xml
src/sensor_kit/fodro_1_sensor_kit_launch/fodro_1_sensor_kit_description/config/: sensors_calibration.yaml  sensors_front_wheel.yaml  sensors_gnss_base.yaml
src/sensor_kit/fodro_1_sensor_kit_launch/fodro_1_sensor_kit_description/urdf/: sensors.xacro  sensors_front_wheel.xacro  sensors_gnss_base.xacro  (+1 more)
src/sensor_kit/fodro_1_sensor_kit_launch/fodro_1_sensor_kit_launch/: CMakeLists.txt  package.xml
src/sensor_kit/fodro_1_sensor_kit_launch/fodro_1_sensor_kit_launch/data/: center_camera.yaml  fod_left_center_camera.yaml  fod_left_left_camera.yaml  fod_left_right_camera.yaml  left_camera.yaml
src/sensor_kit/fodro_1_sensor_kit_launch/fodro_1_sensor_kit_launch/launch/: gnss.launch.xml  imu.launch.xml  lidar.launch.xml  radar.launch.xml  sensing.launch.xml
src/sensor_kit/pixkit_sensor_kit_launch/pixkit_sensor_kit_description/: CMakeLists.txt
src/sensor_kit/pixkit_sensor_kit_launch/pixkit_sensor_kit_launch/: package.xml
src/sensor_kit/pixkit_sim_sensor_kit_launch/pixkit_sim_sensor_kit_description/: CMakeLists.txt  package.xml
src/sensor_kit/pixkit_sim_sensor_kit_launch/pixkit_sim_sensor_kit_launch/: CMakeLists.txt  package.xml
(+52 files in other folders)
