<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hvl_planning_launch</name>
  <version>0.1.0</version>
  <description>The hvl_planning_launch package</description>
  <maintainer email="dutjdgns@gmail.com">Seonghun, Yeo</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>autoware_cmake</buildtool_depend>

  <exec_depend>autoware_behavior_path_planner</exec_depend>
  <exec_depend>autoware_behavior_velocity_planner</exec_depend>
  <exec_depend>autoware_costmap_generator</exec_depend>
  <exec_depend>autoware_external_cmd_selector</exec_depend>
  <exec_depend>autoware_external_velocity_limit_selector</exec_depend>
  <exec_depend>autoware_freespace_planner</exec_depend>
  <exec_depend>autoware_mission_planner</exec_depend>
  <exec_depend>autoware_obstacle_cruise_planner</exec_depend>
  <exec_depend>autoware_obstacle_stop_planner</exec_depend>
  <exec_depend>autoware_path_optimizer</exec_depend>
  <exec_depend>autoware_planning_evaluator</exec_depend>
  <exec_depend>autoware_planning_topic_converter</exec_depend>
  <exec_depend>autoware_planning_validator</exec_depend>
  <exec_depend>autoware_remaining_distance_time_calculator</exec_depend>
  <exec_depend>autoware_scenario_selector</exec_depend>
  <exec_depend>autoware_surround_obstacle_checker</exec_depend>
  <exec_depend>autoware_velocity_smoother</exec_depend>
  <exec_depend>glog_component</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
