<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fodro_1_sensor_kit_launch</name>
  <version>0.1.0</version>
  <description>The sample_sensor_kit_launch package</description>
  <maintainer email="damgi.ahn@skyautonet.com">damgi ahn</maintainer>
  <license>skyautonet</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <exec_depend>autoware_pointcloud_preprocessor</exec_depend>
  <exec_depend>ros2_socketcan</exec_depend>
  <exec_depend>cleaner_interface</exec_depend>
  <exec_depend>nmea_navsat_driver</exec_depend>
  <exec_depend>xsens_driver</exec_depend>
  <exec_depend>lslidar_driver</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
